--- a/ML_Model.ipynb
+++ b/ML_Model.ipynb
@@ -29,7 +29,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer, HashingVectorizer, TfidfVectorizer\n",
     "from sklearn.pipeline import make_pipeline, Pipeline, FeatureUnion\n",
     "\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB, BernoulliNB , GaussianNB\n",
     "from sklearn.ensemble import AdaBoostClassifier , ExtraTreesClassifier, RandomForestClassifier\n",
@@ -88,27 +88,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>IQ</td>\n",
-       "      <td>@Nw8ieJUwaCAAreT لكن بالنهاية .. ينتفض .. يغير .</td>\n",
+       "      <td>يسلملي مرورك وروحك الحلوه مبين كلامه خليجي يعني محسوب البشر  حيونه وحشيه  وتطلبون الغرب يحترمكم ويؤمن بدينكم ولاينعتكم بالارهاب بالنهايه  ينتفض  يغير</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>IQ</td>\n",
-       "      <td>@7zNqXP0yrODdRjK يعني هذا محسوب على البشر .. حيونه ووحشيه .. وتطلبون من الغرب يحترمكم ويؤمن بدينكم ولاينعتكم بالإرهاب ..</td>\n",
+       "      <td>خلص والله لعيونكم ماعندي شيء معه بالعكس متابعيني بعتز فيهم  خلص صافيه لبن  مطلبي يقدم استقالته وفوگاها اعتذار ياخي الارهابي عراقي سعودي فلسطيني وين المشكله باب الفرضخليجي وماعنده رحمه وين المساس ب...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>IQ</td>\n",
-       "      <td>@KanaanRema مبين من كلامه خليجي</td>\n",
+       "      <td>شاء اخوه يجمعنه العراق بكل جحيمه حلو  والله الموضوع جدا حساس ويحير اتفق معك بس لاتروح زايد عادي اولا اني ردت رجل جنوبي واللي ذكر حجابها  ثانيا شدعوه صايره محامي لكوهين  صحيح مقوله العراق بلد الغرا...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>IQ</td>\n",
-       "      <td>@HAIDER76128900 يسلملي مرورك وروحك الحلوه💐</td>\n",
+       "      <td>يسعد مساك بنت العم  يسلملي مرورك روعات تواصلك يسعد مساك سيد الحرف الحزين  هه عدوله گلبه ورم عدنه  گلك خل اتونس همه بكل شيء مارضين فهاي السفره اسمها  اتونس وبكيفي</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>IQ</td>\n",
-       "      <td>@hmo2406 وين هل الغيبه  اخ محمد 🌸🌺</td>\n",
+       "      <td>عباله يرجع صدام حسين للحكم ياكلون بخيرنه ويهينون  موظفينه اتركه فتره ماسال مايستحق اهتمامك  ماخذ بشر وحدي</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -122,12 +122,12 @@
        "3      IQ   \n",
        "4      IQ   \n",
        "\n",
-       "                                                                                                                        txt  \n",
-       "0                                                                          @Nw8ieJUwaCAAreT لكن بالنهاية .. ينتفض .. يغير .  \n",
-       "1  @7zNqXP0yrODdRjK يعني هذا محسوب على البشر .. حيونه ووحشيه .. وتطلبون من الغرب يحترمكم ويؤمن بدينكم ولاينعتكم بالإرهاب ..  \n",
-       "2                                                                                           @KanaanRema مبين من كلامه خليجي  \n",
-       "3                                                                                @HAIDER76128900 يسلملي مرورك وروحك الحلوه💐  \n",
-       "4                                                                                        @hmo2406 وين هل الغيبه  اخ محمد 🌸🌺  "
+       "                                                                                                                                                                                                       txt  \n",
+       "0                                                    يسلملي مرورك وروحك الحلوه مبين كلامه خليجي يعني محسوب البشر  حيونه وحشيه  وتطلبون الغرب يحترمكم ويؤمن بدينكم ولاينعتكم بالارهاب بالنهايه  ينتفض  يغير  \n",
+       "1  خلص والله لعيونكم ماعندي شيء معه بالعكس متابعيني بعتز فيهم  خلص صافيه لبن  مطلبي يقدم استقالته وفوگاها اعتذار ياخي الارهابي عراقي سعودي فلسطيني وين المشكله باب الفرضخليجي وماعنده رحمه وين المساس ب...  \n",
+       "2  شاء اخوه يجمعنه العراق بكل جحيمه حلو  والله الموضوع جدا حساس ويحير اتفق معك بس لاتروح زايد عادي اولا اني ردت رجل جنوبي واللي ذكر حجابها  ثانيا شدعوه صايره محامي لكوهين  صحيح مقوله العراق بلد الغرا...  \n",
+       "3                                        يسعد مساك بنت العم  يسلملي مرورك روعات تواصلك يسعد مساك سيد الحرف الحزين  هه عدوله گلبه ورم عدنه  گلك خل اتونس همه بكل شيء مارضين فهاي السفره اسمها  اتونس وبكيفي  \n",
+       "4                                                                                               عباله يرجع صدام حسين للحكم ياكلون بخيرنه ويهينون  موظفينه اتركه فتره ماسال مايستحق اهتمامك  ماخذ بشر وحدي   "
       ]
      },
      "execution_count": 2,
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('full_data.csv')\n",
+    "data = pd.read_csv('concat4.csv')\n",
     "data.head()"
    ]
   },
@@ -155,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "217576    #نجاح_حج_هذا_العام١٤٤\\n#منتدى_الوطن_السعودي\\nعلم اللي مالهم غير الدسايس حيله\\nالجيج بخير وإنا كلنا خدامي\\n\\nمملكتنا دولة كبرى ماهيب دويله\\nوالله اللي عزها منارة الاسلامي\\n\\nالحشود انديرها والحرب ن...\n",
-       "344491                                                                  بنفس هاليوم قبل٢٥سنه تم ايقاف سياره فيها أثنين شباب اعمارهم لا تتجاوز ١٨سنه والتهمه سيارتهم مشغلينها بدون مفتاح(جطل)كلبچوهم ايدهم للخلف1⃣\n",
-       "380119                                                                                                                                            @Mralseyabi @m_namani احسن الظن فيهم يمكن التبن حاجة حلوة عندهم\n",
+       "61164                                  والله يطلع يطلع في الاخير ماسو شي قدمو شي انشاء يطلع فيصل العيافي بو كاتم محبتي منو الغاء كلام اليوم نهائيا تستهلون انتو وقفين صفو غلط قاعد يصير والله حرام\n",
+       "108590                                                              تقبل طاعتكم  و عام انتوا بخير  عام بخير يالخوي  بنلعبللخير بدينا البث شباب  رتويت ميزان حسناتكم يقولون هاذي مو اول مره  شسالفه\n",
+       "52819     الحمدلله شعور  صباحالخير اندم صراحتي فالعيش بوجهين امر يقرفني جدا متطوعات تطوع عملتطوعي فرصهتطوع تطوعبلاحدود غردبصوره غرد الرياض ريتويت ريتويتفضلا صباح الاماني صباحالخير ياوطني الغالي \n",
        "Name: txt, dtype: object"
       ]
      },
@@ -187,9 +187,9 @@
     {
      "data": {
       "text/plain": [
-       "109133    رح ناكل خرا بريحه الجماعه  عده بطلع قائد عرص بيحشر طيزه  جولان\n",
-       "10932                                            والله مابيهم اليحجي صدگ\n",
-       "224136                   شكرا  حرف  قلتيه  وياريت الناس  تتعلم منك وتفهم\n",
+       "62701                                                                                                  افندم حضرتك شفتك  اكدب عنيا يعني اه بحرف النون برضو عندنا نقص حلو ده معناه ايه ربنا يسعدك ويفرح قلبك يارب\n",
+       "99074    اهداء الي  عشان تعرف وتفهم ويصحي ضميرك ضمير الاصل اقراء التعليقات دي كويس سامحنا استاذ حقك رقبتنا عربيه بيت فيلا رحله دبي فرنسا حاجات زي دي الكلام دا حرفيا بعيد علي شديد ياخي اكتر حاجه بتزعل انو ب...\n",
+       "72173    طول عمرك محترم كابتن احمد وياريتهم يفهموا  عارف ليه بتفرج الحلقه بتاعتك وتيجي تخلص بحس اني زعلان انها خلصت  مبدع كالعاده وبالتوفيق دايما ابو الاجناش الزملكاويه بيحاربوا الزمالك عشان عارفين انه لمس...\n",
        "Name: txt, dtype: object"
       ]
      },
@@ -223,12 +223,12 @@
        "3         4\n",
        "4         4\n",
        "         ..\n",
-       "458192    1\n",
-       "458193    1\n",
-       "458194    1\n",
-       "458195    1\n",
-       "458196    1\n",
-       "Name: dialect, Length: 458197, dtype: int32"
+       "114545    1\n",
+       "114546    1\n",
+       "114547    1\n",
+       "114548    1\n",
+       "114549    1\n",
+       "Name: dialect, Length: 114550, dtype: int32"
       ]
      },
      "execution_count": 6,
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "(458197, 0.054561684166417504)"
+       "(114550, 0.21824530772588388)"
       ]
      },
      "execution_count": 7,
@@ -271,24 +271,24 @@
     {
      "data": {
       "text/plain": [
-       "3     57636\n",
-       "11    43742\n",
-       "6     42109\n",
-       "8     36499\n",
-       "12    31069\n",
-       "5     27921\n",
-       "7     27617\n",
-       "13    26832\n",
-       "0     26296\n",
-       "1     26292\n",
-       "10    19116\n",
-       "15    16242\n",
-       "2     16183\n",
-       "4     15497\n",
-       "14    14434\n",
-       "9     11539\n",
-       "17     9927\n",
-       "16     9246\n",
+       "3     14409\n",
+       "11    10936\n",
+       "6     10528\n",
+       "8      9124\n",
+       "12     7767\n",
+       "5      6981\n",
+       "7      6903\n",
+       "13     6708\n",
+       "0      6575\n",
+       "1      6573\n",
+       "10     4779\n",
+       "15     4061\n",
+       "2      4047\n",
+       "4      3875\n",
+       "14     3608\n",
+       "9      2885\n",
+       "17     2481\n",
+       "16     2310\n",
        "Name: dialect, dtype: int64"
       ]
      },
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "(435287, 0.05743337154566987)"
+       "(108822, 0.2297329584091452)"
       ]
      },
      "execution_count": 10,
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Vectorzers\n",
     "cvec = CountVectorizer()\n",
     "hvec = HashingVectorizer(ngram_range=(2,5), n_features=50000)\n",
-    "tvec = TfidfVectorizer(max_features=80000,ngram_range=(3,8),analyzer='char')\n",
+    "tvec = TfidfVectorizer(max_features=30000,ngram_range=(1,6))\n",
     "\n",
     "## classifiers\n",
     "rf = RandomForestClassifier()\n",
@@ -367,6 +367,7 @@
     "\n",
     "lrc =LogisticRegression()\n",
     "svc = SVC()\n",
+    "lsvc = LinearSVC()\n",
     "mnbc = MultinomialNB()\n",
     "bnbc = BernoulliNB()\n",
     "gnbc = GaussianNB()\n",
@@ -376,19 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipe = Pipeline(steps=[\n",
-    "    ('tfidf', hvec),\n",
-    "    ('clf', gnbc ),\n",
+    "    ('tfidf', tvec),\n",
+    "    ('clf', lsvc ),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12514185945002182"
+       "0.7493016759776536"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,16 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.030753352297550163"
+       "0.7327302470439183"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.45384792097404086, 0.3926517839188842)"
+       "(0.7473355384049981, 0.7302360160726473)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
